add dialog create machine

--- a/src/app/modules/home/pages/plc-machine/plc-machine-dialog.component.html
+++ b/src/app/modules/home/pages/plc-machine/plc-machine-dialog.component.html
@@ -12,7 +12,7 @@
     </mat-progress-bar> -->
     <!-- <div style="height: 4px;"></div> -->
     <div mat-dialog-content>
-      <form class="example-form" [formGroup]="deviceForm">
+      <form class="example-form" [formGroup]="assetForm">
         <mat-form-field class="example-full-width">
           <input matInput placeholder="Tên thiết bị" formControlName="name">
         </mat-form-field>
