--- a/src/app/modules/home/pages/plc-machine/plc-machine.component.html
+++ b/src/app/modules/home/pages/plc-machine/plc-machine.component.html
@@ -42,7 +42,7 @@
       <!-- Symbol Column -->
       <ng-container matColumnDef="createdTime">
         <th mat-header-cell *matHeaderCellDef> Create Time</th>
-        <td mat-cell *matCellDef="let element"> {{element.createdTime}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.createdTime | date:'dd/MM/yyyy'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
