--- a/src/app/modules/home/pages/plc-machine/plc-machine-dialog-delete.component.html
+++ b/src/app/modules/home/pages/plc-machine/plc-machine-dialog-delete.component.html
@@ -1,1 +1,25 @@
-<p>plc-machine-dialog-delete works!</p>
+<div>
+    <mat-toolbar color="accent">
+      <h2 translate>{{data.name}}</h2>
+      <span fxFlex></span>
+      <button mat-icon-button
+                (click)="cancel()"
+                  type="button">
+        <mat-icon class="material-icons">close</mat-icon>
+      </button>
+    </mat-toolbar>
+    <div mat-dialog-content>
+
+    </div>
+    <!-- <mat-progress-bar color="warn" mode="indeterminate">
+    </mat-progress-bar> -->
+    <!-- <div style="height: 4px;"></div> -->
+  
+    <div mat-dialog-actions fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="end">
+      <button mat-button
+              (click)="cancel()">{{ 'action.cancel' | translate }}</button>
+      <button mat-raised-button
+              color="accent"
+              (click)="delete()">{{ 'action.delete' | translate }}</button>
+    </div>
+  </div>
