--- a/src/app/modules/home/pages/plc-machine/plc-machine-dialog-delete.component.html
+++ b/src/app/modules/home/pages/plc-machine/plc-machine-dialog-delete.component.html
@@ -1,6 +1,6 @@
 <div>
     <mat-toolbar color="accent">
-      <h2 translate>{{data.name}}</h2>
+      <h2 translate>Are you sure delete this {{data.name}} '{{data.element.name}}'?</h2>
       <span fxFlex></span>
       <button mat-icon-button
                 (click)="cancel()"
@@ -9,12 +9,11 @@
       </button>
     </mat-toolbar>
     <div mat-dialog-content>
-
+      <div>Be careful, after the confirmation the asset and all related data will become unrecoverable.</div>
     </div>
     <!-- <mat-progress-bar color="warn" mode="indeterminate">
     </mat-progress-bar> -->
     <!-- <div style="height: 4px;"></div> -->
-  
     <div mat-dialog-actions fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="end">
       <button mat-button
               (click)="cancel()">{{ 'action.cancel' | translate }}</button>
