--- a/src/app/modules/home/pages/plc-machine/plc-machine.component.html
+++ b/src/app/modules/home/pages/plc-machine/plc-machine.component.html
@@ -57,7 +57,7 @@
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" aria-label="view detail" (click)="openDeleteDialog(element.name)">
+          <button mat-icon-button color="primary" aria-label="view detail" (click)="openDeleteDialog(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
