--- a/src/app/modules/home/pages/device-management/device-management-dialog.component.html
+++ b/src/app/modules/home/pages/device-management/device-management-dialog.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-toolbar color="accent">
-    <h2 translate>device.add-device-text</h2>
+    <h2 translate>{{data.type == "add" ? "Add device": data.element.element.name}}</h2>
     <span fxFlex></span>
     <button mat-icon-button (click)="cancel()" type="button">
       <mat-icon class="material-icons">close</mat-icon>
