add data picker search

--- a/src/app/modules/home/pages/device-management/device-dashboard.component.html
+++ b/src/app/modules/home/pages/device-management/device-dashboard.component.html
@@ -170,7 +170,7 @@
       <div class="row">
         <mat-form-field class="col-6" appearance="fill">
           <mat-label>Thời gian chạy máy</mat-label>
-          <input matInput formControlName="timeRunning"t>
+          <input matInput formControlName="timeRunning">
         </mat-form-field>
         <mat-form-field class="col-6" appearance="fill">
           <mat-label>Dừng máy</mat-label>
