This is a new commit for what I originally planned to be amended

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -26,7 +26,7 @@
         <div fxFlex="auto" fxLayout="row">
           <!-- <img [src]="logo"
                aria-label="logo" class="tb-logo-title"/> -->
-          <div class="tb-logo-title">Po Manager</div>
+          <div class="tb-logo-title">Rạng Đông SCADA</div>
         </div>
       </mat-toolbar>
     </header>
