--- a/src/app/modules/home/components/dashboard-page/dashboard-page.component.html
+++ b/src/app/modules/home/components/dashboard-page/dashboard-page.component.html
@@ -215,12 +215,12 @@
                   [disabled]="isLoading$ | async"
                   (click)="toggleDashboardEditMode()"
                   matTooltip="{{ (isEdit ? 'action.decline-changes': 'action.enter-edit-mode') | translate }}"
-                  matTooltipPosition="above">
+                  matTooltipPosition="above">++
             <mat-icon>{{ isEdit ? 'close' : 'edit' }}</mat-icon>
           </button>
         </section>
         <section data-html2canvas-ignore class="tb-powered-by-footer" [ngStyle]="{'color': dashboard.configuration.settings.titleColor}">
-          <span>Powered by <a href="https://thingsboard.io" target="_blank">Thingsboard v.{{ thingsboardVersion }}</a></span>
+                    <span>Powered by <a href="https://facenet.vn/" target="_blank">iot platform facnet.{{ thingsboardVersion }}</a></span>
         </section>
       </mat-drawer-content>
       <mat-drawer class="tb-details-drawer"
