--- a/src/app/modules/home/pages/product-lines/product-lines.component.html
+++ b/src/app/modules/home/pages/product-lines/product-lines.component.html
@@ -11,24 +11,28 @@
         <mat-icon>search</mat-icon>
     </button>
 </mat-toolbar>
-<!-- <div class="mat-elevation-z8">
+<div class="mat-elevation-z8">
     <table *ngIf="dataSource" mat-table [dataSource]="dataSource">
 
+        <!-- Position Column -->
         <ng-container matColumnDef="nameProductionLine">
             <th class="mat-body-2" mat-header-cell *matHeaderCellDef>Tên dây chuyền</th>
             <td mat-cell *matCellDef="let element"> {{element.element.name}} </td>
         </ng-container>
 
+        <!-- Name Column -->
         <ng-container matColumnDef="codePo">
             <th mat-header-cell *matHeaderCellDef>Mã Po</th>
             <td mat-cell *matCellDef="let element"> {{element.codePo}} </td>
         </ng-container>
 
+        <!-- Weight Column -->
         <ng-container matColumnDef="branch">
             <th mat-header-cell *matHeaderCellDef>Đơn vị sản xuất</th>
             <td mat-cell *matCellDef="let element"> {{element.element.branch}} </td>
         </ng-container>
 
+        <!-- Symbol Column -->
         <ng-container matColumnDef="productionLineMachine">
             <th mat-header-cell *matHeaderCellDef>Dây chuyền máy</th>  
             <td mat-cell *matCellDef="let element"> {{element.productionLineMachine}} </td>
@@ -90,4 +94,4 @@
     </mat-paginator>
     <div>
     </div>
-</div> -->
+</div>
