--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -15,8 +15,8 @@
     limitations under the License.
 
 -->
-<div class="tb-login-content mat-app-background" fxFlex fxLayoutAlign="center center">
-  <mat-card style="max-height: 80vh; overflow-y: auto; background: #ff5722 !important; color: white;">
+<div class="tb-login-content mat-app-background" fxFlex fxLayoutAlign="center center" >
+  <mat-card style="max-height: 80vh; overflow-y: auto; background: #fff4f4 !important; color: rgb(0, 0, 0);">
     <mat-card-content>
       <form class="tb-login-form" [formGroup]="loginFormGroup" (ngSubmit)="login()">
         <fieldset [disabled]="isLoading$ | async" fxLayout="column">
