--- a/src/app/modules/home/components/entity/entities-table.component.scss
+++ b/src/app/modules/home/components/entity/entities-table.component.scss
@@ -18,17 +18,24 @@
 :host {
   width: 100%;
   height: 100%;
+
   .tb-entity-table {
+
+    // khai 2507
+    .k_custom {
+      height: 44px !important;
+    }
+
     .tb-entity-table-content {
       width: 100%;
       height: 100%;
       background: #fff;
 
-      .mat-toolbar-tools{
+      .mat-toolbar-tools {
         min-height: auto;
       }
 
-      .title-container{
+      .title-container {
         overflow: hidden;
       }
 
@@ -43,7 +50,7 @@
         overflow: auto;
       }
 
-      .tb-entity-table-info{
+      .tb-entity-table-info {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -56,7 +63,7 @@
       height: auto;
       min-height: 100px;
 
-      .tb-entity-table-title{
+      .tb-entity-table-title {
         padding-bottom: 5px;
         width: 100%;
       }
