--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -16,6 +16,7 @@
 
 -->
 <mat-sidenav-container>
+  <div>Chị hà ăn cứt</div>
   <mat-sidenav #sidenav class="tb-site-sidenav mat-elevation-z2" [disableClose]="sidenavOpened"
     (click)="sidenavClicked()" [mode]="sidenavMode" [opened]="sidenavOpened && !forceFullscreen">
     <header class="tb-nav-header">
