--- a/src/app/modules/home/menu/side-menu.component.scss
+++ b/src/app/modules/home/menu/side-menu.component.scss
@@ -26,9 +26,10 @@
     list-style: none;
   }
 
-  .tb-side-menu>li {
+  .tb-side-menu>li:active {
     // khai 
     // border-bottom: 1px solid rgba(0, 0, 0, .12);
+    // border-radius: 10px 0px 0px 10px;
   }
 
   a.mat-button {
@@ -48,7 +49,9 @@
 
     &.tb-active {
       font-weight: 500;
-      background-color: rgba(255, 255, 255, .15);
+      // background-color: rgba(255, 255, 255, .15);
+      color: #FFF;
+      background-color: #FF7a00
     }
 
     .mat-button-wrapper {
