--- a/src/app/shared/components/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb.component.html
@@ -25,18 +25,20 @@
     <a *ngSwitchCase="false" [routerLink]="breadcrumb.link" [queryParams]="breadcrumb.queryParams">
       <mat-icon *ngIf="breadcrumb.isMdiIcon" [svgIcon]="breadcrumb.icon">
       </mat-icon>
-      <mat-icon *ngIf="!breadcrumb.isMdiIcon" class="material-icons">
+      <!-- khai 2507 -->
+      <!-- <mat-icon *ngIf="!breadcrumb.isMdiIcon" class="material-icons">
         {{ breadcrumb.icon }}
-      </mat-icon>
+      </mat-icon> -->
       {{ breadcrumb.ignoreTranslate ? (breadcrumb.labelFunction ? breadcrumb.labelFunction() : breadcrumb.label) :
       (breadcrumb.label | translate) }}
     </a>
     <span *ngSwitchCase="true">
       <mat-icon *ngIf="breadcrumb.isMdiIcon" [svgIcon]="breadcrumb.icon">
       </mat-icon>
-      <mat-icon *ngIf="!breadcrumb.isMdiIcon" class="material-icons">
+      <!-- khai 2507 -->
+      <!-- <mat-icon *ngIf="!breadcrumb.isMdiIcon" class="material-icons">
         {{ breadcrumb.icon }}
-      </mat-icon>
+      </mat-icon> -->
       {{ breadcrumb.ignoreTranslate ? (breadcrumb.labelFunction ? breadcrumb.labelFunction() : breadcrumb.label) :
       (breadcrumb.label | translate) }}
     </span>
