--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -17,6 +17,26 @@
   display: flex;
   width: 100%;
   height: 100%;
+  --visible-drawer-space: 70px;
+
+  ::ng-deep {
+    .mat-drawer {
+      &.mat-drawer-side {
+        transform: translate3d(calc(-100% + var(--visible-drawer-space)), 0, 0);
+        visibility: visible !important; // always visible
+      }
+    }
+
+    mat-drawer-container {
+      .mat-drawer-content {
+        margin-left: 0;
+      }
+    }
+
+    .mat-drawer-content {
+      margin-left: var(--visible-drawer-space);
+    }
+  }
 
   .tb-invisible {
     display: none !important;
@@ -50,9 +70,20 @@
 
   mat-sidenav.tb-site-sidenav {
     width: 250px;
+    visibility: visible !important;
+    // transform: translate3d(-80%, 0, 0) !important;
 
     @media (max-width:456px) {
       width: calc(100% - 56px);
+    }
+
+    .tb_nav_cusom_k {
+      position: relative;
+
+      .img_header_custom_k {
+        position: absolute;
+        right: 8px;
+      }
     }
 
     .tb-nav-header {
