--- a/src/app/modules/home/menu/menu-link.component.html
+++ b/src/app/modules/home/menu/menu-link.component.html
@@ -15,9 +15,25 @@
     limitations under the License.
 
 -->
-<a mat-button routerLinkActive="tb-active" [routerLinkActiveOptions]="{exact: !section.notExact}"
+<a *ngIf="countt == undefined || countt" mat-button routerLinkActive="tb-active"
+  [routerLinkActiveOptions]="{exact: !section.notExact}" routerLink="{{section.path}}">
+  <mat-icon *ngIf="!section.isMdiIcon && section.icon != null" class="material-icons">{{section.icon}}</mat-icon>
+  <mat-icon *ngIf="section.isMdiIcon && section.icon != null" [svgIcon]="section.icon"></mat-icon>
+  <span>{{section.name | translate}}</span>
+
+</a>
+<a *ngIf=" countt==false" class="item_custom_k" mat-button routerLinkActive="tb-active" matTooltip="{{section.name}}"
+  [routerLinkActiveOptions]="{exact: !section.notExact}" routerLink="{{section.path}}">
+  <span>{{ " " | translate}}</span>
+  <mat-icon *ngIf="!section.isMdiIcon && section.icon != null"
+    class="material-icons icon_custom_k">{{section.icon}}</mat-icon>
+  <mat-icon *ngIf="section.isMdiIcon && section.icon != null" [svgIcon]="section.icon"
+    class="material-icons icon_custom_k"></mat-icon>
+</a>
+
+<!-- <a mat-button routerLinkActive="tb-active" [routerLinkActiveOptions]="{exact: !section.notExact}"
   routerLink="{{section.path}}">
   <mat-icon *ngIf="!section.isMdiIcon && section.icon != null" class="material-icons">{{section.icon}}</mat-icon>
   <mat-icon *ngIf="section.isMdiIcon && section.icon != null" [svgIcon]="section.icon"></mat-icon>
   <span>{{section.name | translate}}</span>
-</a>
+</a> -->
