--- a/src/app/shared/components/user-menu.component.scss
+++ b/src/app/shared/components/user-menu.component.scss
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 :host {
+
+
   div.tb-user-info {
     line-height: 1.5;
 
@@ -36,6 +38,8 @@
 
   }
 
+  div.notifications_custome_k {}
+
   mat-icon.tb-mini-avatar {
     width: 36px;
     height: 36px;
@@ -47,4 +51,23 @@
 
 .tb-user-menu-items {
   min-width: 256px;
+}
+
+.btn_menu_custom_k {
+  height: unset !important;
+
+  margin: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  div {
+    display: flex;
+    justify-content: space-between;
+
+    p {
+      font-size: 1rem;
+
+    }
+  }
+
+
 }
