--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -74,7 +74,10 @@
           </button>
 
           <div>
-            <p class="header_text">Supervisory Control and Data Acquisition</p>
+            <!-- Supervisory Control and Data Acquisition
+
+ -->
+            <p class="header_text">{{'common.header'}}</p>
           </div>
           <!-- khai -->
           <button [fxShow]="forceFullscreen" mat-icon-button [ngClass]="{'tb-invisible': displaySearchMode()}"
