--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -17,6 +17,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  // KHAI
   --visible-drawer-space: 70px;
 
   ::ng-deep {
@@ -71,7 +72,6 @@
   mat-sidenav.tb-site-sidenav {
     width: 250px;
     visibility: visible !important;
-    // transform: translate3d(-80%, 0, 0) !important;
 
     @media (max-width:456px) {
       width: calc(100% - 56px);
