--- a/src/app/modules/home/pages/profile/profile.component.html
+++ b/src/app/modules/home/pages/profile/profile.component.html
@@ -25,7 +25,8 @@
         </div>
         <div fxFlex fxLayout="column">
           <span class="mat-subheader" translate>profile.last-login-time</span>
-          <span class="profile-last-login-ts" style='opacity: 0.7;'>{{ user?.additionalInfo?.lastLoginTs | date:'yyyy-MM-dd HH:mm:ss'  }}</span>
+          <span class="profile-last-login-ts" style='opacity: 0.7;'>{{ user?.additionalInfo?.lastLoginTs |
+            date:'yyyy-MM-dd HH:mm:ss' }}</span>
         </div>
       </div>
     </mat-card-title>
@@ -39,7 +40,7 @@
         <fieldset [disabled]="isLoading$ | async">
           <mat-form-field class="mat-block">
             <mat-label translate>user.email</mat-label>
-            <input matInput formControlName="email" required/>
+            <input matInput formControlName="email" required />
             <mat-error *ngIf="profile.get('email').hasError('required')">
               {{ 'user.email-required' | translate }}
             </mat-error>
@@ -49,46 +50,40 @@
           </mat-form-field>
           <mat-form-field class="mat-block">
             <mat-label translate>user.first-name</mat-label>
-            <input matInput formControlName="firstName"/>
+            <input matInput formControlName="firstName" />
           </mat-form-field>
           <mat-form-field class="mat-block">
             <mat-label translate>user.last-name</mat-label>
-            <input matInput formControlName="lastName"/>
+            <input matInput formControlName="lastName" />
           </mat-form-field>
           <mat-form-field class="mat-block">
             <mat-label translate>language.language</mat-label>
             <mat-select formControlName="language">
-              <mat-option *ngFor="let lang of languageList" [value]="lang">
+              <mat-option *ngFor="let lang of languageList " [value]="lang">
                 {{ lang ? ('language.locales.' + lang | translate) : ''}}
               </mat-option>
             </mat-select>
           </mat-form-field>
           <section class="tb-home-dashboard" fxFlex fxLayout="column" fxLayout.gt-sm="row" *ngIf="!isSysAdmin()">
-            <tb-dashboard-autocomplete
-              fxFlex
-              placeholder="{{ 'dashboard.home-dashboard' | translate }}"
+            <tb-dashboard-autocomplete fxFlex placeholder="{{ 'dashboard.home-dashboard' | translate }}"
               formControlName="homeDashboardId"
               [dashboardsScope]="user?.authority === authorities.TENANT_ADMIN ? 'tenant' : 'customer'"
-              [tenantId]="user?.tenantId?.id"
-              [customerId]="user?.customerId?.id"
-              [selectFirstDashboard]="false"
-            ></tb-dashboard-autocomplete>
+              [tenantId]="user?.tenantId?.id" [customerId]="user?.customerId?.id"
+              [selectFirstDashboard]="false"></tb-dashboard-autocomplete>
             <mat-checkbox fxFlex formControlName="homeDashboardHideToolbar">
               {{ 'dashboard.home-dashboard-hide-toolbar' | translate }}
             </mat-checkbox>
           </section>
           <div fxLayout="row" style="padding-bottom: 16px;">
-            <button mat-button mat-raised-button color="accent"
-                    type="button"
-                    [disabled]="(isLoading$ | async)" (click)="changePassword()">
+            <button mat-button mat-raised-button color="accent" type="button" [disabled]="(isLoading$ | async)"
+              (click)="changePassword()">
               {{'profile.change-password' | translate}}
             </button>
           </div>
           <div fxLayout="row" class="layout-wrap">
             <span fxFlex></span>
-            <button mat-button mat-raised-button color="accent"
-                    type="submit"
-                    [disabled]="(isLoading$ | async) || profile.invalid || !profile.dirty">
+            <button mat-button mat-raised-button color="accent" type="submit"
+              [disabled]="(isLoading$ | async) || profile.invalid || !profile.dirty">
               {{ 'action.save' | translate }}
             </button>
           </div>
