--- a/src/app/shared/components/user-menu.component.html
+++ b/src/app/shared/components/user-menu.component.html
@@ -17,7 +17,9 @@
 -->
 <section fxLayout="row">
   <div fxHide.lt-lg *ngIf="displayUserInfo" class="tb-user-info" fxLayout="row">
-    <mat-icon class="material-icons tb-mini-avatar">account_circle</mat-icon>
+    <button mat-menu-item class="avartar_btn_custom_k" (click)="openProfile()">
+      <mat-icon class="material-icons tb-mini-avatar avatar_custom_k">account_circle</mat-icon>
+    </button>
     <div fxLayout="column" fxLayoutAlign="center">
       <span *ngIf="userDisplayName$ | async; let userDisplayName" class="tb-user-display-name">{{ userDisplayName
         }}</span>
@@ -43,8 +45,7 @@
     </mat-select>
   </mat-form-field>
   <div class="notifications_custome_k" style="margin: auto 1rem;">
-    <button mat-button [matMenuTriggerFor]="menu" style="background-color: transparent;
-    border: none;">
+    <button matTooltip="Notifications" mat-button [matMenuTriggerFor]="menu" class="bg-transparent">
       <div [matBadge]="matBadgeCount" matBadgeColor="warn">
         <svg width="27" height="26" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -79,29 +80,9 @@
         </div>
       </button>
     </mat-menu>
-    <!-- <div>
-      <div class="d_flex justify_between">
-        <h3>Thông báo</h3>
-        <svg width="27" height="26" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M21.7576 16.8012L20.6326 14.9338C20.3963 14.5175 20.1826 13.73 20.1826 13.2688V10.4225C20.1826 7.77875 18.6301 5.495 16.3913 4.42625C15.8063 3.39125 14.7263 2.75 13.4888 2.75C12.2626 2.75 11.1601 3.41375 10.5751 4.46C8.38131 5.55125 6.86256 7.8125 6.86256 10.4225V13.2688C6.86256 13.73 6.64881 14.5175 6.41256 14.9225L5.27631 16.8012C4.82631 17.555 4.72506 18.3875 5.00631 19.1525C5.27631 19.9062 5.91756 20.4913 6.75006 20.7725C8.93256 21.515 11.2276 21.875 13.5226 21.875C15.8176 21.875 18.1126 21.515 20.2951 20.7838C21.0826 20.525 21.6901 19.9287 21.9826 19.1525C22.2751 18.3763 22.1963 17.5212 21.7576 16.8012Z"
-            fill="white" />
-          <path
-            d="M16.6838 23.0113C16.2113 24.3163 14.9625 25.25 13.5 25.25C12.6113 25.25 11.7338 24.89 11.115 24.2488C10.755 23.9113 10.485 23.4613 10.3275 23C10.4738 23.0225 10.62 23.0337 10.7775 23.0562C11.0363 23.09 11.3063 23.1237 11.5763 23.1462C12.2175 23.2025 12.87 23.2362 13.5225 23.2362C14.1638 23.2362 14.805 23.2025 15.435 23.1462C15.6713 23.1237 15.9075 23.1125 16.1325 23.0787C16.3125 23.0562 16.4925 23.0338 16.6838 23.0113Z"
-            fill="white" />
-        </svg>
-      </div>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-
-    </div> -->
   </div>
-  <div style="margin: auto 1rem;">
-    <button style="background-color: transparent;
+  <!-- <div style="margin: auto 1rem;">
+    <button matTooltip="Log out" style="background-color: transparent;
     border: none;" (click)="logout()">
       <svg width="22" height="26" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -109,6 +90,43 @@
           fill="white" />
       </svg>
     </button>
+  </div> -->
+  <div style="margin: auto 1rem;">
+    <button matTooltip="Log out" class="bg-transparent" (click)="openDialog(template)">
+      <svg width="22" height="26" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M10 20C4.477 20 0 15.523 0 10C0 4.477 4.477 -9.96412e-07 10 -9.96412e-07C11.5527 -0.00116746 13.0842 0.359772 14.4729 1.05414C15.8617 1.74851 17.0693 2.75717 18 4H15.29C14.1352 2.98176 12.7112 2.31836 11.1887 2.0894C9.66625 1.86044 8.11007 2.07565 6.70689 2.70921C5.30371 3.34277 4.11315 4.36776 3.27807 5.66119C2.44299 6.95461 1.99887 8.46153 1.999 10.0011C1.99913 11.5407 2.4435 13.0475 3.27879 14.3408C4.11409 15.6341 5.30482 16.6589 6.7081 17.2922C8.11139 17.9255 9.66761 18.1405 11.19 17.9113C12.7125 17.6821 14.1364 17.0184 15.291 16H18.001C17.0702 17.243 15.8624 18.2517 14.4735 18.9461C13.0846 19.6405 11.5528 20.0013 10 20ZM17 14V11H9V9H17V6L22 10L17 14Z"
+          fill="white" />
+      </svg>
+    </button>
+    <ng-template #template>
+      <div class="d_flex justify_between">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_525_2)">
+            <path
+              d="M20 10C20 12.6522 18.9464 15.1957 17.0711 17.0711C15.1957 18.9464 12.6522 20 10 20C7.34784 20 4.8043 18.9464 2.92893 17.0711C1.05357 15.1957 0 12.6522 0 10C0 7.34784 1.05357 4.8043 2.92893 2.92893C4.8043 1.05357 7.34784 0 10 0C12.6522 0 15.1957 1.05357 17.0711 2.92893C18.9464 4.8043 20 7.34784 20 10ZM6.87 7.54125H7.90125C8.07375 7.54125 8.21125 7.4 8.23375 7.22875C8.34625 6.40875 8.90875 5.81125 9.91125 5.81125C10.7687 5.81125 11.5538 6.24 11.5538 7.27125C11.5538 8.065 11.0862 8.43 10.3475 8.985C9.50625 9.59625 8.84 10.31 8.8875 11.4688L8.89125 11.74C8.89256 11.822 8.92606 11.9002 8.98453 11.9577C9.04299 12.0153 9.12173 12.0475 9.20375 12.0475H10.2175C10.3004 12.0475 10.3799 12.0146 10.4385 11.956C10.4971 11.8974 10.53 11.8179 10.53 11.735V11.6037C10.53 10.7062 10.8713 10.445 11.7925 9.74625C12.5538 9.1675 13.3475 8.525 13.3475 7.17625C13.3475 5.2875 11.7525 4.375 10.0063 4.375C8.4225 4.375 6.6875 5.1125 6.56875 7.2325C6.56704 7.27287 6.5736 7.31316 6.58804 7.3509C6.60248 7.38863 6.62448 7.42302 6.65269 7.45194C6.68091 7.48085 6.71474 7.5037 6.75211 7.51906C6.78949 7.53442 6.8296 7.54197 6.87 7.54125ZM9.77625 15.595C10.5388 15.595 11.0625 15.1025 11.0625 14.4362C11.0625 13.7462 10.5375 13.2613 9.77625 13.2613C9.04625 13.2613 8.515 13.7462 8.515 14.4362C8.515 15.1025 9.045 15.595 9.77625 15.595Z"
+              fill="#FE6108" />
+          </g>
+          <defs>
+            <clipPath id="clip0_525_2">
+              <rect width="20" height="20" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+
+        <h6>Bạn có chắc chắn muốn đăng xuất?</h6>
+        <button (click)="cancel()">
+          <svg width="15" height="15" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11.7803 10.5208L19.6245 2.6483C20.1252 2.14934 20.1252 1.37318 19.6245 0.87422C19.1238 0.37526 18.3449 0.37526 17.8442 0.87422L10 8.74671L2.10014 0.92966C1.65508 0.4307 0.820584 0.4307 0.375522 0.92966C-0.125174 1.42862 -0.125174 2.20478 0.375522 2.70374L8.21975 10.5208L0.375522 18.3378C-0.125174 18.8368 -0.125174 19.613 0.375522 20.1119C0.598053 20.3337 0.93185 20.5 1.26565 20.5C1.59944 20.5 1.93324 20.3891 2.15577 20.1119L10 12.2949L17.8442 20.1119C18.0668 20.3337 18.4006 20.5 18.7344 20.5C19.0681 20.5 19.4019 20.3891 19.6245 20.1119C20.1252 19.613 20.1252 18.8368 19.6245 18.3378L11.7803 10.5208Z"
+              fill="#8C8C8C" />
+          </svg>
+        </button>
+
+      </div>
+      <button mat-button color="primary" (click)="cancel()">Hủy</button>
+      <button mat-button color="warn" (click)="logout()">Đăng xuất</button>
+    </ng-template>
   </div>
   <!-- khai -->
   <!-- <button mat-button mat-icon-button [matMenuTriggerFor]="userMenu">
