--- a/src/app/modules/home/components/entity/entities-table.component.scss
+++ b/src/app/modules/home/components/entity/entities-table.component.scss
@@ -22,8 +22,8 @@
   .tb-entity-table {
 
     // khai 2507
-    .k_custom {
-      height: 44px !important;
+    .custom_k {
+      margin-top: 2.5rem;
     }
 
     .tb-entity-table-content {
