--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -150,5 +150,9 @@
   .tb-main-content {
     overflow: auto;
     position: relative;
+
+    .breadcrumb_custome_k {
+      z-index: 3;
+    }
   }
 }
