--- a/src/app/shared/components/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumb.component.scss
@@ -16,6 +16,11 @@
 :host {
   min-width: 0;
 
+  // khai 2907
+  .custom_k {
+    margin: 1rem 0;
+  }
+
   .tb-breadcrumb {
     font-size: 18px;
     font-weight: 400;
