--- a/src/app/modules/home/components/entity/entities-table.component.html
+++ b/src/app/modules/home/components/entity/entities-table.component.html
@@ -26,9 +26,9 @@
   <mat-drawer-content>
     <div class="mat-padding tb-entity-table tb-absolute-fill">
       <!-- khai 2507-->
-      <tb-breadcrumb class="mat-toolbar-tools k_custom">
-      </tb-breadcrumb>
-      <div fxLayout="column" class="mat-elevation-z1 tb-entity-table-content">
+      <!-- <tb-breadcrumb class="mat-toolbar-tools k_custom">
+      </tb-breadcrumb> -->
+      <div fxLayout="column" class="mat-elevation-z1 tb-entity-table-content custom_k">
         <mat-toolbar class="mat-table-toolbar" [fxShow]="!textSearchMode && dataSource.selection.isEmpty()">
           <div class="mat-toolbar-tools">
             <div fxLayout="row" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutAlign.xs="center start"
