--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -58,9 +58,7 @@
     <mat-toolbar style="background-color: #E5E5E5;
     color: #000;" color="accent" fxFlex="0%" class="tb-side-menu-toolbar" fxLayout="column" role="navigation">
       <tb-side-menu [MyCount]="this.sideNavOpen_k"></tb-side-menu>
-      <div *ngIf="this.sidenav.opened == false">
-        <li>abc</li>
-      </div>
+
     </mat-toolbar>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -116,6 +114,9 @@
         *ngIf="isLoading$ | async">
       </mat-progress-bar>
       <div fxFlex fxLayout="column" tb-toast class="tb-main-content">
+        <tb-breadcrumb [fxShow]="!displaySearchMode()" fxFlex [activeComponent]="activeComponent"
+          class="mat-toolbar-tools breadcrumb_custome_k">
+        </tb-breadcrumb>
         <router-outlet (activate)="activeComponentChanged($event)"></router-outlet>
       </div>
     </div>
