--- a/src/app/modules/home/pages/profile/profile.component.scss
+++ b/src/app/modules/home/pages/profile/profile.component.scss
@@ -18,26 +18,33 @@
 :host {
   mat-card.profile-card {
     margin: 8px;
+    height: 90vh;
+
     @media #{$mat-gt-sm} {
       width: 60%;
     }
+
     .mat-headline {
       margin: 0;
     }
+
     .profile-email {
       font-size: 16px;
       font-weight: 400;
     }
+
     .mat-subheader {
       line-height: 24px;
-      color: rgba(0,0,0,0.54);
+      color: rgba(0, 0, 0, 0.54);
       font-size: 14px;
       font-weight: 400;
     }
+
     .profile-last-login-ts {
       font-size: 16px;
       font-weight: 400;
     }
+
     .tb-home-dashboard {
       tb-dashboard-autocomplete {
         @media #{$mat-gt-sm} {
@@ -48,6 +55,7 @@
           padding-bottom: 12px;
         }
       }
+
       mat-checkbox {
         @media #{$mat-gt-sm} {
           margin-top: 16px;
