--- a/src/app/modules/home/menu/side-menu.component.html
+++ b/src/app/modules/home/menu/side-menu.component.html
@@ -17,7 +17,7 @@
 -->
 <ul fxFlex fxLayout="column" fxLayoutAlign="start stretch" class="tb-side-menu">
   <li *ngFor="let section of menuSections$ | async; trackBy: trackByMenuSection" [ngSwitch]="section.type === 'link'">
-    <tb-menu-link [MyCountt]="this.count" *ngSwitchCase="true" [section]="section"></tb-menu-link>
-    <tb-menu-toggle *ngSwitchCase="false" [section]="section"></tb-menu-toggle>
+    <tb-menu-link [sideNavOpen_k]="this.sideNavOpen_k" *ngSwitchCase="true" [section]="section"></tb-menu-link>
+    <tb-menu-toggle (click)="clickToggle()" *ngSwitchCase="false" [section]="section"></tb-menu-toggle>
   </li>
 </ul>
