--- a/src/app/modules/home/pages/admin/settings-card.scss
+++ b/src/app/modules/home/pages/admin/settings-card.scss
@@ -16,15 +16,17 @@
 @import "../../../../../scss/constants";
 
 :host {
- mat-card.settings-card {
-   margin: 8px;
+  mat-card.settings-card {
+    margin: 8px;
+    //khai 0108
+    height: 90vh;
 
-   @media #{$mat-md} {
-     width: 80%;
-   }
+    @media #{$mat-md} {
+      width: 80%;
+    }
 
-   @media #{$mat-gt-md} {
-     width: 60%;
-   }
+    @media #{$mat-gt-md} {
+      width: 60%;
+    }
   }
 }
