--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -117,6 +117,7 @@
       white-space: nowrap;
 
       .tb-nav-header-toolbar {
+        background: #2A3884;
         min-height: 64px;
         height: inherit;
         padding: 0;
