--- a/src/app/modules/home/menu/menu-link.component.html
+++ b/src/app/modules/home/menu/menu-link.component.html
@@ -32,7 +32,8 @@
 
 </a>
 <a *ngIf=" sideNavOpen_kk==false" class="item_custom_k" mat-button routerLinkActive="tb-active"
-  matTooltip="{{section.name}}" [routerLinkActiveOptions]="{exact: !section.notExact}" routerLink="{{section.path}}">
+  matTooltip="{{section.name | translate}}" [routerLinkActiveOptions]="{exact: !section.notExact}"
+  routerLink="{{section.path}}">
   <span>{{ " " | translate}}</span>
   <mat-icon *ngIf="!section.isMdiIcon && section.icon != null"
     class="material-icons icon_custom_k">{{section.icon}}</mat-icon>
