--- a/src/app/shared/components/user-menu.component.html
+++ b/src/app/shared/components/user-menu.component.html
@@ -107,8 +107,8 @@
       </svg>
     </button>
     <ng-template #template>
-      <div class="d_flex justify_between dialog_custome_k">
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class=" dialog_custome_k">
+        <!-- <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_525_2)">
             <path
               d="M20 10C20 12.6522 18.9464 15.1957 17.0711 17.0711C15.1957 18.9464 12.6522 20 10 20C7.34784 20 4.8043 18.9464 2.92893 17.0711C1.05357 15.1957 0 12.6522 0 10C0 7.34784 1.05357 4.8043 2.92893 2.92893C4.8043 1.05357 7.34784 0 10 0C12.6522 0 15.1957 1.05357 17.0711 2.92893C18.9464 4.8043 20 7.34784 20 10ZM6.87 7.54125H7.90125C8.07375 7.54125 8.21125 7.4 8.23375 7.22875C8.34625 6.40875 8.90875 5.81125 9.91125 5.81125C10.7687 5.81125 11.5538 6.24 11.5538 7.27125C11.5538 8.065 11.0862 8.43 10.3475 8.985C9.50625 9.59625 8.84 10.31 8.8875 11.4688L8.89125 11.74C8.89256 11.822 8.92606 11.9002 8.98453 11.9577C9.04299 12.0153 9.12173 12.0475 9.20375 12.0475H10.2175C10.3004 12.0475 10.3799 12.0146 10.4385 11.956C10.4971 11.8974 10.53 11.8179 10.53 11.735V11.6037C10.53 10.7062 10.8713 10.445 11.7925 9.74625C12.5538 9.1675 13.3475 8.525 13.3475 7.17625C13.3475 5.2875 11.7525 4.375 10.0063 4.375C8.4225 4.375 6.6875 5.1125 6.56875 7.2325C6.56704 7.27287 6.5736 7.31316 6.58804 7.3509C6.60248 7.38863 6.62448 7.42302 6.65269 7.45194C6.68091 7.48085 6.71474 7.5037 6.75211 7.51906C6.78949 7.53442 6.8296 7.54197 6.87 7.54125ZM9.77625 15.595C10.5388 15.595 11.0625 15.1025 11.0625 14.4362C11.0625 13.7462 10.5375 13.2613 9.77625 13.2613C9.04625 13.2613 8.515 13.7462 8.515 14.4362C8.515 15.1025 9.045 15.595 9.77625 15.595Z"
@@ -119,20 +119,22 @@
               <rect width="20" height="20" fill="white" />
             </clipPath>
           </defs>
-        </svg>
+        </svg> -->
 
-        <h6>Bạn có chắc chắn muốn đăng xuất?</h6>
+        <h4 style="
+        color: #FF7A00;">Đăng xuất?</h4>
+        <h6 style="text-align: center;font-size: 1.1rem;">Bạn có chắc chắn muốn đăng xuất?</h6>
         <button (click)="cancel()" class="exit_btn_custom_k">
-          <svg width="14" height="12" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="17" height="17" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M11.7803 10.5208L19.6245 2.6483C20.1252 2.14934 20.1252 1.37318 19.6245 0.87422C19.1238 0.37526 18.3449 0.37526 17.8442 0.87422L10 8.74671L2.10014 0.92966C1.65508 0.4307 0.820584 0.4307 0.375522 0.92966C-0.125174 1.42862 -0.125174 2.20478 0.375522 2.70374L8.21975 10.5208L0.375522 18.3378C-0.125174 18.8368 -0.125174 19.613 0.375522 20.1119C0.598053 20.3337 0.93185 20.5 1.26565 20.5C1.59944 20.5 1.93324 20.3891 2.15577 20.1119L10 12.2949L17.8442 20.1119C18.0668 20.3337 18.4006 20.5 18.7344 20.5C19.0681 20.5 19.4019 20.3891 19.6245 20.1119C20.1252 19.613 20.1252 18.8368 19.6245 18.3378L11.7803 10.5208Z"
-              fill="#000" />
+              fill="#8C8C8C" />
           </svg>
         </button>
       </div>
       <div class="btn_dialog_k">
-        <button mat-raised-button color="primary" (click)="cancel()">Hủy</button>
-        <button mat-raised-button color="warn" (click)="logout()">Đăng xuất</button>
+        <button mat-stroked-button style="background: #E5E5E5;color:#000" (click)="cancel()">Hủy</button>
+        <button mat-stroked-button style="background: #FF7A00; margin-right:1rem" (click)="logout()">Đăng xuất</button>
       </div>
     </ng-template>
   </div>
