--- a/src/app/shared/components/user-menu.component.html
+++ b/src/app/shared/components/user-menu.component.html
@@ -122,8 +122,8 @@
         </svg> -->
 
         <h4 style="
-        color: #FF7A00;">Đăng xuất?</h4>
-        <h6 style="text-align: center;font-size: 1.1rem;">Bạn có chắc chắn muốn đăng xuất?</h6>
+        color: #FF7A00;">{{ 'custom_k.log-out' | translate }}?</h4>
+        <h6 class="heading_dialog">{{ 'custom_k.log_out_sure' | translate }}?</h6>
         <button (click)="cancel()" class="exit_btn_custom_k">
           <svg width="17" height="17" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -133,8 +133,10 @@
         </button>
       </div>
       <div class="btn_dialog_k">
-        <button mat-stroked-button style="background: #E5E5E5;color:#000" (click)="cancel()">Hủy</button>
-        <button mat-stroked-button style="background: #FF7A00; margin-right:1rem" (click)="logout()">Đăng xuất</button>
+        <button class="btn_cancel" mat-stroked-button (click)="cancel()">{{ 'custom_k.cancel' |
+          translate }}</button>
+        <button class="btn_logout" mat-stroked-button (click)="logout()">{{
+          'custom_k.accept' | translate }}</button>
       </div>
     </ng-template>
   </div>
